# game-data-scraper

./: Cargo.toml  README.md
src/: main.rs
src/parsers/: itch_game_info_parser.rs  itch_parser.rs  mod.rs
src/scrapers/: itch_rss_scraper.rs  itch_scraper.rs  mod.rs
